--- a/src/components/Mainnav/mainnav-dropdown.css
+++ b/src/components/Mainnav/mainnav-dropdown.css
@@ -1,9 +1,6 @@
 :host {
     /* NEW in 2.0 */
-    --sgds-mainnav-dropdown-theme-color: var(--sgds-mainnav-theme-color, var(--sgds-primary));
-    --sgds-mainnav-dropdown-color: var(--sgds-body-color);
     --sgds-mainnav-dropdown-border-bottom-width: 0.125rem;
-    --sgds-mainnav-dropdown-disabled-opacity: var(--sgds-mainnav-disabled-opacity, 0.5)
   }
 
   .dropdown-menu {
@@ -14,8 +11,8 @@
     box-shadow: 0 0.5rem 1rem rgba(#000, 0.15);
   }
   .nav-link.show {
-    border-color: var(--sgds-mainnav-dropdown-theme-color);
-    color: var(--sgds-mainnav-dropdown-theme-color);
+    border-color: var(--sgds-mainnav-theme-color);
+    color: var(--sgds-mainnav-theme-color);
   }
 
   li {
@@ -24,7 +21,7 @@
   a.nav-link {
     display: flex;
     cursor: pointer;
-    color: var(--sgds-mainnav-dropdown-color);
+    color: var(--sgds-mainnav-color);
     border-bottom: var(--sgds-mainnav-dropdown-border-bottom-width) solid transparent;
     min-height: 100%;
     align-items: center;
@@ -32,8 +29,8 @@
     text-decoration: none;
     &.active,
     &:hover {
-      color: var(--sgds-mainnav-dropdown-theme-color);
-      border-color: var(--sgds-mainnav-dropdown-theme-color);
+      color: var(--sgds-mainnav-theme-color);
+      border-color: var(--sgds-mainnav-theme-color);
     }
     &:focus-visible {
       box-shadow: 0 0 0 0.25rem rgba(89, 66, 219, 0.25);
@@ -44,6 +41,6 @@
   .nav-link.disabled {
     cursor: default;
     pointer-events: none;
-    opacity: var(--sgds-mainnav-dropdown-disabled-opacity);
+    opacity: var(--sgds-mainnav-disabled-opacity);
   }
 
