--- a/src/components/Input/input.css
+++ b/src/components/Input/input.css
@@ -2,9 +2,9 @@
 
 :host {
   --sgds-input-border-radius: var(--sgds-border-radius, 0.3215rem);
-  --sgds-input-focus-box-shadow: 0px 0px 0px var(--sgds-input-btn-focus-width, 2px) var(--sgds-info-300, #7FB5FF);
+  --sgds-input-focus-box-shadow: 0px 0px 0px var(--sgds-focus-width, 2px) var(--sgds-info-300, #7FB5FF);
 
-  --sgds-invalid-feedback-box-shadow: 0px 0px 0px var(--sgds-input-btn-focus-width, 2px) var(--sgds-danger-300, #FF9782);
+  --sgds-invalid-feedback-box-shadow: 0px 0px 0px var(--sgds-focus-width, 2px) var(--sgds-danger-300, #FF9782);
 }
 .form-label {
   font-weight: 700;
@@ -206,7 +206,7 @@
   background-size: calc(1em + 0.4375rem) calc(1em + 0.4375rem);
   border-color: var(--sgds-form-invalid-border-color);
   padding-right: calc(2em + 0.875rem);
-  box-shadow: 0px 0px 0px var(--sgds-input-btn-focus-width, 2px) var(--sgds-red-300, #FF9782);
+  box-shadow: 0px 0px 0px var(--sgds-focus-width, 2px) var(--sgds-red-300, #FF9782);
 }
 .form-control.is-invalid:focus {
   border-color: var(--sgds-form-invalid-border-color);
