--- a/root.css
+++ b/root.css
@@ -166,6 +166,8 @@
   --sgds-focus-width: 0.13rem;
   --sgds-color-disabled: #939393;
   --sgds-disabled-opacity: 0.5;
+  --sgds-input-btn-padding-x: 1rem;
+  --sgds-input-btn-padding-y: 0.4375rem;
 }
 /* [data-bs-theme="dark"] {
   --sgds-body-color: #d2d2d2;
